			+ Added moving of banners, campaigns and zones  (Niels) 20011201
			+ Added duplication of banners (Niels, thanks to Kelly Cochran) 20011201
			+ Added ability to apply display limitations to other banners  (Niels) 20011201
			+ Added new invocation type for popups/popunders  (Niels) 20011202
			+ Added the ability to use beacon images for logging stats  (Niels) 20011202

			+ Misc changes to library and function names
			  - Renamed nocache.inc.php to lib-cache.inc.php  (Niels) 20011020
			  - Renamed acl.inc.php to lib-acl.inc.php  (Niels) 20011020
			  - Renamed dblib.php to lib-db.inc.php	 (Niels) 20011020
			  - Renamed db_* functions to phpAds_db*  (Niels) 20011020
			  - Renamed acl_* functions to phpAds_acl*  (Niels) 20011020
			  - Replaced mysql_* functions with phpAds_db* stubs  (Niels) 20011020
			  - All config variables are now stored in one array  (Niels) 20011027
			  - Changed the name of the database settings in config.inc.php  (Niels) 20011027
			  - Made default values for settings in config.inc.php more consistent  (Niels) 20011027
			  - Moved all includes inside view.inc.php to all invocation files  (Niels) 20011027

			+ Misc changes
			  - Moved some functions around to make sure no unneeded 
			    functions were included during invocation.  (Niels) 20011020
			  - Removed space from UNIQUE INDEX definition in all.sql  (Niels) 20011024
			  - Added $phpads_proxy_lookup option  (Niels) 20011024
			  - Removed path detection from config.inc.php, 
			    to prevent it from being executed twice  (Niels) 20011025
			  - Added filter to make sure keywords are entered the right way  (Niels) 20011025
			  - Added messages for empty lists of zones, stats and clients  (Niels) 20011104
			  - Added a database compatibility mode, to solve potential problems
			    when the database connection is shared with another product or script  (Niels) 20011111
			  - Added width and height to the array returned by view_raw()  (Niels) 20011115